web/results/txt
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp:6:5: error: 'int time' redeclared as different kind of symbol
 int time=-1;
     ^
In file included from /usr/include/pthread.h:24:0,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr-default.h:35,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/gthr.h:148,
                 from /usr/include/c++/4.8/ext/atomicity.h:35,
                 from /usr/include/c++/4.8/bits/basic_string.h:39,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/random:41,
                 from /root/compile/ai/ai.cpp:2:
/usr/include/time.h:192:15: error: previous declaration of 'time_t time(time_t*)'
 extern time_t time (time_t *__timer) __THROW;
               ^
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:262:11: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
  if (now==time) return;
           ^
/root/compile/ai/ai.cpp:263:11: error: assignment of function 'time_t time(time_t*)'
  else time=now;
           ^
/root/compile/ai/ai.cpp:263:11: error: cannot convert 'const int' to 'time_t(time_t*)throw () {aka long int(long int*)throw ()}' in assignment
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
[ 40%] Linking CXX shared library libai.so
[100%] Built target ai
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
Scanning dependencies of target ai
[ 20%] Building CXX object CMakeFiles/ai.dir/ai/ai.cpp.o
/root/compile/ai/ai.cpp: In function 'void AIMain()':
/root/compile/ai/ai.cpp:10:9: error: 'map' was not declared in this scope
         map = GetMap();
         ^
/root/compile/ai/ai.cpp:27:98: error: 'printf' was not declared in this scope
     printf("GetMap test result: avg=%.2fms min=%.2fms max", 50000.0 / count_sum, 10.0 / count_max);
                                                                                                  ^
/root/compile/ai/ai.cpp:29:20: error: 'putchar' was not declared in this scope
         putchar('>');
                    ^
/root/compile/ai/ai.cpp:31:61: error: 'map' was not declared in this scope
     printf("=%.2fms objects_number=%d\n", 10.0 / count_min, map->objects_number);
                                                             ^
make[2]: *** [CMakeFiles/ai.dir/ai/ai.cpp.o] Error 1
make[1]: *** [CMakeFiles/ai.dir/all] Error 2
make: *** [all] Error 2
